--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,9 +18,10 @@ spec:
         ports:
         - containerPort: 3000
         resources:
-          limits:
-            memory: "256Mi"   
-            cpu: "500m"       
           requests:
-            memory: "128Mi"   
-            cpu: "250m"       
+            memory: "128Mi"
+            cpu: "64m"
+          limits:
+            memory: "256Mi"
+            cpu: "256m"
+      restartPolicy: Always
